ingress/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
  labels:
    app: nginx 
    env: prod
    microservice: page1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx 
      env: prod
      microservice: page1
  template:
    metadata:
      labels:
        app: nginx 
        env: prod
        microservice: page1
    spec:
      containers:
      - name: prod
        image: surya22ganesh/prodimg
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-deploy-nordport
spec:
  type: NodePort
  selector:
    app: nginx
    env: prod
    microservice: page1
  ports:
    - port: 81
      targetPort: 80
