ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress-myservice
spec:
  rules:
  - host: prod.suryalearns.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-deploy-nordport    #service name
            port:
              number: 81                  #service port 
  ingressClassName: nginx
