ingress/ingressWithSecret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress-myservice
spec:
  tls:
   - hosts: 
      - prod.suryalearns.shop
     secretName: mysecretName   # this is a secret file with tls/ssl https certificate.  
  rules:
  - host: prod.suryalearns.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-deploy-nordport
            port:
              number: 80
  ingressClassName: nginx
